# endercom-cli

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
endercom_cli/: main.py
endercom_cli/templates/: .env.example  agent.py  app.py  requirements.txt  template.yaml
