[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "endercom-cli"
version = "0.1.3"
description = "Endercom CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[project.scripts]
endercom = "endercom_cli.main:app"

