[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "endercom-cli"
version = "0.1.6"
description = "Endercom CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[tool.setuptools.package-data]
endercom_cli = ["templates/*", "templates/.env.example"]

[project.scripts]
endercom = "endercom_cli.main:app"

